# SuicidalLollipop

./: CMakeLists.txt  Camera.cpp  Camera.hpp  DrowableObject.hpp  Error.cpp  Error.hpp  GLfunc.cpp  GLfunc.hpp  GLheader.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  GameTemplate.cpp  GameTemplate.hpp  GarbageCollector.cpp  GarbageCollector.hpp  GraphicEngine.cpp  GraphicEngine.hpp  Keyboard.cpp  Keyboard.hpp  Loger.cpp  Loger.hpp  Makefile  Mouse.cpp  Mouse.hpp  MovableObject.hpp  Object3D.hpp  PhysicalEngine.cpp  PhysicalEngine.hpp  README.md  SDLTexture.cpp  SDLTexture.hpp  ScreenRec.cpp  ScreenRec.hpp  Shaders.cpp  Shaders.hpp  Storage.cpp  Storage.hpp  Texture.cpp  (+6 more)
Log/: GameLog.txt  UtilityLog.txt
Objects/: DrawableObject.hpp  LightSource.cpp  LightSource.hpp  MashObject.cpp  MashObject.hpp  Menu.cpp  Menu.hpp  Model.cpp  Model.hpp  MovableObject(tmp).cpp  MovableObject.cpp  MovableObject.hpp  NPC.cpp  NPC.hpp  Object2D.cpp  Object2D.hpp  Object3D.cpp  Object3D.hpp  Object3D.rar  Objects.hpp  Player.cpp  Player.hpp  Portal.cpp  Portal.hpp  Room.cpp  Room.hpp  TrianglePortal.cpp  TrianglePortal.hpp
Shaders/: fragmentshader.glsl  fragmentshaderGAUSS.glsl  geometryshader.glsl  vertexshader.glsl  vertexshaderGAUSS.glsl
Source/: Cube0.txt  Room0.txt  SnowMan.txt  Soccer_ball.txt  World.txt
Source/Portals/: portal1.txt  portal2.txt
